--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3.8'
+version: '3.7'
 services:
   db:
     image: postgres:14.1-alpine
     restart: always
     environment:
-      - POSTGRES_DB=challege-foh
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=db_challenge
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     ports:
       - '5432:5432'
     volumes:
-      - db:/var/lib/postgresql/data
+      - database_data:/var/lib/postgresql/data
 volumes:
-  db:
+  database_data:
     driver: local
