--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=CHALLENGE-FOH
 server.port=8080
 
 # database values
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/challege-foh
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_challenge
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
+server.error.include-stacktrace=on_param
