--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Challenge técnico para foh</description>
 	<properties>
 		<java.version>17</java.version>
+		<dependency.hibernate-core.version>6.1.6.Final</dependency.hibernate-core.version>
+		<dependency.junit.version>4.12</dependency.junit.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,12 +47,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.1.6.Final</version>
+			<version>${dependency.hibernate-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${dependency.junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
