Se hizo un refactor del método para calcular los nombres primos y se crearon y modificaron los archivos de docker necesarios para subir el microservicio a gcp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CHALLENGE-FOH
 server.port=8080
 
 # database values
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_challenge
+spring.datasource.url=jdbc:postgresql://db:5432/db_challenge
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
