--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,21 @@ services:
       - '5432:5432'
     volumes:
       - database_data:/var/lib/postgresql/data
+  springboot:
+    restart: always
+    build: .
+    container_name: springboot
+    working_dir: /opt/app
+    volumes:
+      - ./app:/app
+      - ~/.m2:/root/.m2
+    expose:
+      - "8080"
+    ports:
+      - 8080:8080
+    depends_on:
+      - db
+
 volumes:
   database_data:
     driver: local
